@@ -14,6 +14,7 @@
   potentially causing problems with ACLs. This has been fixed.
 - Fix db_dump reading of retained messages.
 - Fix reloading of persistence_file and persistence_location.
+- Add example of logging all messages to mysql.
 
 0.15 - 20120205
 ===============
